src/test/resources/miniJava/Test26.mjava
class Test26 {
	public void main(String[] args){
		String s = new String(); // error
	}
}
